Add in fix for mobile positioning

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -13,7 +13,7 @@
     align-items: center;
     justify-content: space-between;
     height: 18em;
-    margin-top: 17em;
+    margin-top: 30vh;
 }
 
 .HomeTitle {
